--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ menu:
   home: / 
   archive: /archives
   works: /demo
-  #music: /music
-  about: /about
+  # music: /music
+  # about: /about
 
 highlight_theme: normal
 
@@ -38,3 +38,9 @@ baidu_statistic: 43801fd5fd36825a81964beb18e12f02
 # 看板娘
 live2d:
   model: nipsilon  
+
+# Lunr
+lunr:
+  field: all
+  fulltext: true
+  path: assets/lunr/  
